--- a/app/src/main/res/layout/activity_share_photograph.xml
+++ b/app/src/main/res/layout/activity_share_photograph.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SharePhotograph">
+    tools:context=".view.SharePhotograph">
 
     <ImageView
         android:id="@+id/imageView"
